--- a/Truongmain/ag5-invoice/src/app/home/home.component.html
+++ b/Truongmain/ag5-invoice/src/app/home/home.component.html
@@ -3,7 +3,8 @@
   <p>
     <strong>Username:</strong> {{info.username}}<br/>
     <strong>Roles:</strong> {{info.authorities}}<br />
-    <strong>Token:</strong> {{info.token}}.
+    <strong>Token:</strong> {{info.token}}
+    <strong>Id: </strong> {{info.id}}
   </p>
   <button class="btn btn-secondary" (click)="logout()">Logout</button>
 </div>
