change log: finish all expect invoice master

--- a/Truongmain/ag5-invoice/src/app/app.component.html
+++ b/Truongmain/ag5-invoice/src/app/app.component.html
@@ -62,8 +62,10 @@
 </nav>
 
 <ng-template #loggedOut>
+  <h2>
     Please login.
+  </h2>
   </ng-template>
-<div class="container">
+<div class="container-fuild bg-1">
   <router-outlet></router-outlet>
 </div>
