--- a/Truongmain/ag5-invoice/src/app/home/home.component.html
+++ b/Truongmain/ag5-invoice/src/app/home/home.component.html
@@ -10,5 +10,9 @@
 </div>
 
 <ng-template #loggedOut>
-  Please login.
+  <div class="text-center text-default head bg-1">
+    <h1>PLEASE LOGIN</h1>
+    <a routerLink="/auth/login">Login</a>
+  </div>
+
 </ng-template>
