change log: do simple thing

--- a/Truongmain/ag5-invoice/src/app/create-invoice/create-invoice.component.html
+++ b/Truongmain/ag5-invoice/src/app/create-invoice/create-invoice.component.html
@@ -34,31 +34,37 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="form-group">
                 <label for="type"></label>
-                <input type="text" class="form-control input-lg" name="i_type" [(ngModel)]="form.i_type" #i_type="ngModel"
-                  required placeholder="Type"/>
-                <div *ngIf="f.submitted && i_type.invalid">
-                  <div *ngIf="i_type?.errors.required" class="text-danger">Type is required</div>
-                </div>
+                <!-- <input type="text" class="form-control input-lg" name="i_type" [(ngModel)]="form.i_type" #i_type="ngModel"
+                  required placeholder="Type"/> -->
+
+                <select class="form-control input-lg" name="i_type" [(ngModel)]="form.i_type" #i_type="ngModel" aria-placeholder="Type">
+                    <option value="Electric">Electric</option>
+                    <option value="Water">Water</option>
+                    <option value="Network">Network</option>
+                  </select>
+                  <div *ngIf="f.submitted && i_type.invalid">
+                      <div *ngIf="i_type?.errors.required" class="text-danger">Type is required</div>
+                    </div>
               </div>
           </div>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="vat"></label>
-            <input type="text" class="form-control input-lg" placeholder="vat" name="vat" [(ngModel)]="form.vat" #vat="ngModel" required />
-            <div *ngIf="f.submitted && vat.invalid">
+            <input type="text" class="form-control input-lg" placeholder="VAT" name="vat" [(ngModel)]="form.vat" #vat="ngModel" required/>
+            <div *ngIf="f.submitted && vat.invalid" >
               <div *ngIf="vat?.errors.required" class="text-danger">VAT is required</div>
             </div>
-        </div>
+        </div> -->
         <div class="form-group">
             <label for="grand_total"></label>
-            <input type="text" class="form-control input-lg" name="grandTotal" [(ngModel)]="form.grandTotal" #grandTotal="ngModel" required placeholder="grand"/>
+            <input type="text" class="form-control input-lg" name="grandTotal" [(ngModel)]="form.grandTotal" #grandTotal="ngModel" required placeholder="Limit"/>
             <div *ngIf="f.submitted && grandTotal.invalid" >
               <div *ngIf="grandTotal?.errors.required" class="text-danger">Grand is required</div>
             </div>
         </div>
         <div class="form-group">
           <label for="total"></label>
-          <input type="text" class="form-control input-lg" name="total" [(ngModel)]="form.total" #total="ngModel" required placeholder="total"/>
+          <input type="text" class="form-control input-lg" name="total" [(ngModel)]="form.total" #total="ngModel" required placeholder="Total"/>
           <div *ngIf="f.submitted && total.invalid" >
             <div *ngIf="total?.errors.required" class="text-danger">Total is required</div>
           </div>
