--- a/Truongmain/ag5-invoice/src/app/user/user.component.html
+++ b/Truongmain/ag5-invoice/src/app/user/user.component.html
@@ -5,6 +5,7 @@
       <th scope="col">#ID</th>
       <th scope="col">Date.</th>
       <th scope="col">Type</th>
+      <th scope="col">VAT</th>
       <th scope="col">Grand</th>
       <th scope="col">Total</th>
     </tr>
