--- a/Truongmain/ag5-invoice/src/app/admin/admin.component.html
+++ b/Truongmain/ag5-invoice/src/app/admin/admin.component.html
@@ -1,3 +1,7 @@
-<h4>Content from Server</h4>
-<h1>Hello</h1>
-{{errorMessage}}
+<div class="con">
+</div>
+<div class="head">
+  <h1>MAKE YOUR LIFE EASY</h1>
+  <p>Let we help you to manage the invoice of your family</p>
+  <a routerLink="/invoices">Let find...</a>
+</div>
