--- a/Truongmain/ag5-invoice/src/app/user-list/user-list.component.html
+++ b/Truongmain/ag5-invoice/src/app/user-list/user-list.component.html
@@ -9,8 +9,9 @@
   <button type="button" class="button btn-danger" (click)='deleteUsers()'>Delete All</button>
 </div> -->
 
-
+<div class="text-center">
 <a href="signup" class="btn btn-primary">Create</a>
+</div>
 <table class="table table-striped">
   <thead>
     <tr>
