--- a/Truongmain/ag5-invoice/src/app/user/user.component.html
+++ b/Truongmain/ag5-invoice/src/app/user/user.component.html
@@ -1,4 +1,6 @@
+<div class=text-center>
 <a href="create-invoice" class="btn btn-primary">Create invoice</a>
+</div>
 <table class="table table-striped">
   <thead>
     <tr>
